<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/title_provisioning"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/et_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textNoSuggestions"
        android:gravity="center"
        android:padding="10dp"
        android:hint="@string/user_id_provision_fragment"/>

    <EditText
        android:id="@+id/et_reg_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:padding="10dp"
        android:hint="@string/enter_reg_code_provision_fragment"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_provision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_provision"/>

        <Button
            android:id="@+id/btn_remove_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginStart="8dp"
            android:enabled="false"
            android:text="@string/btn_remove_token"/>
    </LinearLayout>


</LinearLayout>